[tool.poetry]
name = "django-js-logger"
version = "0.1.0"
description = "Frontend logging for Django projects"
authors = ["Sondre Lillebø Gundersen"]

[tool.poetry.dependencies]
python = "^3.6"
djangorestframework = "^3.11.0"
django = "^3.0.6"

[tool.poetry.dev-dependencies]
pre-commit = "^2.4.0"
wheel = "^0.34.2"
selenium = "^3.141.0"
coverage = "^5.1"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

[tool.black]
line-length = 140
skip-string-normalization = true
target-version = ['py38']
include = '\.pyi?$'
exclude = '''
/(\.eggs|\.git|\.hg|\.mypy_cache|\.tox|\.venv|\venv|\migrations|\static|\__pycache__)
'''
