[tool.poetry]
name = "django-js-logger"
version = "1.0.0"
description = "Frontend logging for Django projects"
authors = ["Sondre Lillebø Gundersen"]
readme = "docs/PYPI_README.rst"

[tool.poetry.dependencies]
python = "^3.6.1"
djangorestframework = "^3"
django = "^2.2 || ^3.0"

[tool.poetry.dev-dependencies]
pre-commit = "^2.4.0"
wheel = "^0.34.2"
selenium = "^3.141.0"
coverage = "^5.1"
flake8 = "^3.8.2"

[tool.black]
line-length = 140
skip-string-normalization = true
target-version = ['py38']
include = '\.pyi?$'
exclude = '''
/(\.eggs|\.git|\.hg|\.mypy_cache|\.tox|\.venv|\venv|\migrations|\static|\__pycache__)
'''

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
