[tool.poetry]
name = "django-js-logger"
version = "1.0.0"
description = "Frontend logging for Django projects"
authors = ["Sondre Lillebø Gundersen <sondrelg@live.no>"]
readme = "docs/PYPI_README.rst"
homepage = "https://github.com/snok/django-js-logger"
license = "BSD-4-Clause"
keywords = ['django']
classifiers = [
        'Development Status :: 4 - Beta',
        'Environment :: Web Environment',
        'Framework :: Django',
        'Framework :: Django :: 2.2',
        'Framework :: Django :: 3.0',
        'Intended Audience :: Developers',
        'License :: OSI Approved :: BSD License',
        'Natural Language :: English',
        'Operating System :: OS Independent',
        'Programming Language :: Python',
        'Programming Language :: Python :: 3.6',
        'Programming Language :: Python :: 3.7',
        'Programming Language :: Python :: 3.8',
        'Topic :: Software Development',
        'Topic :: Software Development :: Libraries',
        'Topic :: Software Development :: Libraries :: Application Frameworks',
        'Topic :: Software Development :: Libraries :: Python Modules',
    ]

[tool.poetry.dependencies]
python = "^3.6.1"
djangorestframework = "^3"
django = "^2.2 || ^3.0"

[tool.poetry.dev-dependencies]
pre-commit = "^2.4.0"
wheel = "^0.34.2"
selenium = "^3.141.0"
coverage = "^5.1"
flake8 = "^3.8.2"

[tool.black]
line-length = 140
skip-string-normalization = true
target-version = ['py38']
include = '\.pyi?$'
exclude = '''
/(\.eggs|\.git|\.hg|\.mypy_cache|\.tox|\.venv|\venv|\migrations|\static|\__pycache__)
'''

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
